--- a/report/makefile
+++ b/report/makefile
@@ -2,4 +2,4 @@ all:
 	pdflatex -interaction=nonstopmode -file-line-error-style -synctex=1 report.tex && open report.pdf
 
 clean:
-	rm *.aux *.log
+	rm *.aux *.log *.dvi *.synctex.gz
